<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">" Layouts"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="frag1_text">Cписок с загрузкой данных с сервера через SQL базу. </string>
	<string name="frag2_text">Cписок с загрузкой данных напрямую с сервера (В качестве данных - начало web страницы, полученной по HTTP запросу www.google.com.ua)</string>
	<string name="frag3_text">Cписок с загрузкой данных напрямую из базы SQL (Создается и читается в onCreate()) </string>
	<string name="frag4_text">Загружаетстя mp3 файл и воспроизводится</string>
	<string name="frag5_text">Форма с отправкой данных в JSON формате</string>
	
	<string name="name">"Name:"</string>
	<string name="email">"E-mail:"</string>
	<string name="pass">"Password:"</string>
	<string name="passc">"Confirm password:"</string>
	<string name="submit"> Submit </string>

	<string name="T1">1</string>
	<string name="T2">2</string>
	<string name="T3">3</string>
	<string name="T4">4</string>
	<string name="T5">5</string>

	<string name="dialog_1">Dialog 1</string>
	<string name="dialog_2">Dialog 2</string>
	<string name="message_text">Text of your message</string>
	<string name="ok">OK</string>
	<string name="play_text">  Play  </string>
	<string name="pause_text"> Pause </string>
	<string name="mp3_url">http://dl.dropboxusercontent.com/u/6197740/explosion.mp3</string>
    
    <string name="number_list">Список чисел</string>
	<string name="empty">Нет данных</string>

</resources>
